# SandGNAT

./: .gitignore  CLAUDE.md  README.md  crossinvestigation-plan.md  pyproject.toml
.github/workflows/: bandit.yml  dependency-review.yml  pages.yml  pylint.yml  python-lint-fast.yml  python-tests.yml  python-typecheck.yml  semgrep.yml
assets/logo/: README.md
docs/: MALWARE_ANALYSIS_SYSTEM_DESIGN.md  README.md  _config.yml  index.md
docs/_includes/: head_custom.html
docs/assets/css/: style.scss
docs/explanation/: anti-analysis-evasion.md  architecture.md  gnat-integration.md  index.md  isolation-model.md  near-duplicate-short-circuit.md  similarity.md  why-stix.md
docs/how-to/: add-a-parser.md  apply-migrations.md  bake-template-for-evasion.md  build-linux-guest.md  build-windows-guest.md  configure-virustotal.md  configure-yara.md  index.md  query-export-api.md  run-under-gunicorn.md  submit-under-investigation.md  tune-vm-pools.md
docs/reference/: celery-tasks.md  configuration.md  database-schema.md  http-api.md  index.md  investigation-context.md  stix-output.md  wire-protocol.md
docs/tutorials/: 01-your-first-sample.md  02-local-dev-stack.md  03-force-reanalysis.md  index.md
guest_agent/: __init__.py  __main__.py  config.py  executor.py  runner.py  watcher.py
guest_agent/activity/: __init__.py  base.py  config.py  cursor_tour.py  keyboard_noise.py  mouse_jiggle.py  simulator.py  winapi.py  window_dance.py
guest_agent/capture/: __init__.py  dropped_files.py  procmon.py  regshot.py  tshark.py
guest_agent/stealth/: __init__.py  injector.py  log_parser.py
guest_agent/stealth/sleep_patcher/: .gitignore  CMakeLists.txt  README.md
guest_agent/stealth/sleep_patcher/src/: logger.cpp  logger.h  sleep_patcher.cpp
infra/guest/: README.md  configure-capture.ps1  disable-defender.ps1  disable-updates.ps1  seed-user-profile.ps1
infra/guest/seed-data/: README.md
infra/inetsim/: README.md  dns-whitelist.txt  inetsim.conf  netem.sh
infra/inetsim/responses/: README.md
infra/opnsense/: README.md
infra/proxmox/: README.md  harden-template.sh
infra/yara/: anti_vm.yar
linux_guest_agent/: __init__.py  __main__.py  config.py  runner.py  watcher.py
linux_guest_agent/tools/: __init__.py  capa_runner.py  disasm_trigrams.py  fuzzy.py  pe_elf.py  strings_entropy.py  yara_deep.py
migrations/: 001_initial_schema.sql  002_intake_and_vm_pool.sql  003_static_analysis.sql  004_investigation_context.sql
orchestrator/: __init__.py  analyzer.py  celery_app.py  config.py  db.py  evasion_detector.py  export_api.py  guest_driver.py  intake.py  intake_api.py  intake_server.py  models.py  persistence.py  proxmox_client.py  schema.py  similarity.py  static_analysis.py  stix_builder.py  tasks.py  tasks_static.py  trigrams.py  vm_pool.py  vt_client.py  worker.py  yara_scanner.py
orchestrator/parsers/: __init__.py  pcap.py  procmon.py  regshot.py
tests/: conftest.py  test_activity.py  test_analyzer.py  test_capa_runner.py  test_dropped_files.py  test_evasion_detector.py  test_export_api.py  test_export_investigation.py  test_gnat_connector_contract.py  test_guest_driver.py  test_intake.py  test_intake_api.py  test_intake_investigation.py  test_linux_guest_runner.py  test_parsers_procmon.py  test_parsers_regshot.py  test_proxmox_client.py  test_schema.py  test_similarity.py  test_static_analyzer.py  test_static_pipeline.py  test_stealth.py  test_stix_builder.py  test_stix_stamping.py  test_trigrams.py  test_vm_pool.py  test_vt_client.py  test_worker.py  test_yara_scanner.py
tools/: build_logo_pack.py
